# marment-co

./: .gitignore  .travis.yml  Procfile  pyproject.toml  requirements.txt
marment_co/: __init__.py  config.py  manage.py  sync_db.py
marment_co/client/: .gitignore  package-lock.json  package.json
marment_co/client/config/: prod.env.js
marment_co/client/src/components/: Project.vue
marment_co/client/src/router/: index.js
marment_co/migrations/versions/: 5ab4861bce9d_.py
marment_co/server/: __init__.py  app.py  config.py  view.py
marment_co/server/ext/: github.py
marment_co/server/projects/: __init__.py  controllers.py  models.py
marment_io/: app.py
marment_io/client/: package-lock.json  package.json
marment_io/client/config/: dev.env.js
marment_io/client/src/components/: HelloWorld.vue
tests/: test_app.py  test_marment_co.py  test_marment_io.py
