[tool.poetry]
name = "marment-io"
version = "0.1.0"
description = ""
authors = ["Henry Marment <henry@adsquare.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.0"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
