[tool.poetry]
name = "marment-io"
version = "0.1.0"
description = ""
authors = ["Henry Marment <henry@adsquare.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.0"
gunicorn = "^19.9"
Flask-Cors = "^3.0"
PyGithub = "^1.43"
Flask-SQLAlchemy = "^2.3"
flask-marshmallow = "^0.9.0"
marshmallow-sqlalchemy = "^0.15.0"
marshmallow = "^2.18"
psycopg2 = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
autoenv = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
